# AI-Ethica

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
ai_ethica/: __init__.py
ai_ethica/accountability/: __init__.py  tracker.py
ai_ethica/bias/: __init__.py  detector.py
ai_ethica/fairness/: __init__.py  metrics.py
ai_ethica/privacy/: __init__.py  evaluator.py
ai_ethica/transparency/: __init__.py  analyzer.py
docs/: ETHICS.md  index.html
examples/: basic_usage.py  quickstart.ipynb
tests/: __init__.py  test_bias_detector.py  test_fairness_metrics.py
